--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<dependency>
+           <groupId>mysql</groupId>
+           <artifactId>mysql-connector-java</artifactId>
+          <version>8.0.26</version>
+      </dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -32,6 +39,13 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.hibernate</groupId>
+              <artifactId>hibernate-core</artifactId>
+            <version>5.4.30.Final</version>
+       </dependency>
+
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
