--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,26 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+	     <dependency>
+			  <groupId>org.postgresql</groupId>
+			  <artifactId>postgresql</artifactId>
+			  <scope>runtime</scope>
+		  </dependency>
+
+  <dependency>
+     <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.6.15.Final</version>
+       <exclusions>
+        <exclusion>
+            <groupId>org.hibernate.common</groupId>
+            <artifactId>hibernate-commons-annotations</artifactId>
+        </exclusion>
+    </exclusions>
+</dependency>
+
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
