--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 
-# Configurações do banco de dados MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/livros_apiRest
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+spring.datasource.url= jdbc:postgresql://localhost:5432/livros_apirest
+spring.datasource.username=postgres
+spring.datasource.password=9860
+spring.jpa.hibernate.ddl-auto=update
